--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "npm-auto-update": "./cli.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prowe/npm-auto-update.git"
